secondfile/objects/Product_Administration__c.object
<CustomObject>
    <description>This object is to carry the threshold for each category of courses to enable an SP to sell a product.</description>
    <fields>
        <fullName>Admin_Cntrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Admin Control</label>
        <referenceTo>Admin_Control__c</referenceTo>
        <relationshipLabel>Product Administrations</relationshipLabel>
        <relationshipName>Product_Course_Thresholds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Also_Known_As__c</fullName>
        <label>Also Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Count_Architect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Course Count - Architect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Count_Care__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Course Count - Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Count_Sales__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Course Count - Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Count_Technical_Sales__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Course Count - Technical Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Count_Technical_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Course Count - Technical Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_On_Business_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Business Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Course_Completions_Architect__c</fullName>
        <formula>Course_Count_Architect__c  *  Minimum_Users_Architect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Course Completions - Architect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Course_Completions_Care__c</fullName>
        <formula>Course_Count_Care__c  *  Minimum_Users_Care__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Course Completions - Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Course_Completions_Sales__c</fullName>
        <formula>Course_Count_Sales__c  *  Minimum_Users_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Course Completions - Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Course_Completions_Tech_Sales__c</fullName>
        <formula>Course_Count_Technical_Sales__c  *  Minimum_Users_Technical_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Course Completions - Tech Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Course_Completions_Tech_Support__c</fullName>
        <formula>Course_Count_Technical_Support__c  *   Minimum_Users_Technical_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Course Completions-Tech Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Users_Architect__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Users - Architect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Users_Care__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Users - Care</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Users_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Users - Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Users_Technical_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Users - Technical Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Users_Technical_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Users - Technical Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetExam_Name__c</fullName>
        <label>NetExam Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Full_Name__c</fullName>
        <label>PE Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Short_Name__c</fullName>
        <label>PE Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Network Services</fullName>
                </value>
                <value>
                    <fullName>Cloud &amp; Hosting</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Security Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Training_Name__c</fullName>
        <label>Product Training Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>PNT</fullName>
                </value>
                <value>
                    <fullName>NBFW</fullName>
                </value>
                <value>
                    <fullName>IPFLEX</fullName>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                </value>
                <value>
                    <fullName>ANIRA</fullName>
                </value>
                <value>
                    <fullName>Attwireless</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>CaaS</fullName>
                </value>
                <value>
                    <fullName>StaaS</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>MiiM</fullName>
                </value>
                <value>
                    <fullName>IPTollFree</fullName>
                </value>
                <value>
                    <fullName>COLHS</fullName>
                </value>
                <value>
                    <fullName>ASE</fullName>
                </value>
                <value>
                    <fullName>PRIVATECLOUD</fullName>
                </value>
                <value>
                    <fullName>Office@Hand</fullName>
                </value>
                <value>
                    <fullName>Jasper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Label__c</fullName>
        <label>Record Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Product__c</fullName>
        <label>Unique Product</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Administration</label>
    <listViews>
        <fullName>Product_Enablement</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Course_Count_Sales__c</columns>
        <columns>Minimum_Users_Sales__c</columns>
        <columns>Course_Count_Technical_Sales__c</columns>
        <columns>Minimum_Users_Technical_Sales__c</columns>
        <columns>Course_Count_Care__c</columns>
        <columns>Minimum_Users_Care__c</columns>
        <columns>PE_Short_Name__c</columns>
        <columns>Display_On_Business_Profile__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>Product Enablement</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Product Administration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Administration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>